--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/finsight
+MONGODB_URI=mongodb+srv://rishikkumarchaurasiya:Shakshi%40323@finsight-cluster.flx0dcw.mongodb.net/?retryWrites=true&w=majority&appName=finsight-cluster
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRE=30d
 PORT=5001
